Fix widget spacing when one container is set

--- a/css/defaults.css
+++ b/css/defaults.css
@@ -106,9 +106,6 @@
 .menu-item-has-children .dropdown-menu-toggle {
     padding-right: 20px;
 }
-.one-container .sidebar .widget {
-    padding: 0px;
-}
 
 .site-footer .footer-widgets-container .inner-padding {
 	padding:0px 0px 0px 40px;
